# libgdns

./: CMakeLists.txt
include/: overload.h
scripts/: cleanup.sh
src/: CMakeLists.txt  c_ares_overload.c  overload.c
src/utils/: CMakeLists.txt  db.c  format.c  serialization.c  utils.h
tests/: CMakeLists.txt  Test.java  goto_test.c  serialization.c  test.c  test.js  test_db.c
